Use ProcessBuilder to instead of old approach.